# PoucherWeb

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  accessibility-audit-report.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json  vite.config.ts
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  init-ssh-tunnel.sh
.github/workflows/: ci.yml  e2e.yml  terraform.yml
e2e/: playwright.config.ts
e2e/fixtures/: auth.ts
e2e/tests/: auth.spec.ts  bookmarks.spec.ts  (+1 more)
lambdas/: getBookmarkInfo.js
mobile/: PLAN.md  app.json  metro.config.js  package.json  tsconfig.json
scripts/: send-e2e-report.mjs
services/: .env.example  README.md  SERVICES.md  alembic.ini  pyproject.toml  requirements-prod.txt  requirements.txt
services/alembic/: env.py
services/alembic/versions/: 20260130_add_bookmark_metadata.py
services/auth/: __init__.py  handler.py  requirements.txt
services/bookmarks/: __init__.py  handler.py  requirements.txt
services/metadata/: handler.py
services/migrations/: 001_initial_schema.sql  002_add_bookmark_metadata.sql  003_add_user_preferences.sql  004_create_notes.sql
services/notes/: handler.py
services/screenshot/: __init__.py  handler.py  requirements.txt
services/scripts/: build_lambda.sh
services/shared/: __init__.py  requirements.txt
services/shared/db/: __init__.py  connection.py  models.py
services/shared/utils/: __init__.py  auth.py  response.py
services/tags/: __init__.py  handler.py  requirements.txt
services/users/: __init__.py  handler.py  requirements.txt
shared/: package.json  tsconfig.json
src/: App.tsx  main.tsx
terraform/: README.md
(+126 files in other folders)
